--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <button onclick="unduh()" class=" w-full rounded-2xl py-4 px-8 md:py-6 md:px-12 mb-12 bg-primary text-white text-base md:text-xl font-bold drop-shadow-mydrop1 hover:bg-dark hover:drop-shadow-mydrop2 focus:bg-dark transition duration-300 ease-in-out">
                         <div class=" w-full">Coba sekarang</div>
                     </button>
-                    <a href="/dist/tutorial_pasang.pdf" target="_blank" class=" text-primary text-lg underline">
+                    <a href="./dist/tutorial_pasang.pdf" target="_blank" class=" text-primary text-lg underline">
                         Bagaimana cara install?
                     </a>
                 </div>
