--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/output.css">
-    <link rel="icon" type="image/x-icon" href="/dist/img/logo.png">
+    <link rel="icon" type="image/x-icon" href="/njawani-app/dist/img/logo.png">
     <title>Njawani-Object Detector</title>
 </head>
 <body>
@@ -206,7 +206,7 @@
                     <button onclick="unduh()" class=" w-full rounded-2xl py-4 px-8 md:py-6 md:px-12 mb-12 bg-primary text-white text-base md:text-xl font-bold drop-shadow-mydrop1 hover:bg-dark hover:drop-shadow-mydrop2 focus:bg-dark transition duration-300 ease-in-out">
                         <div class=" w-full">Coba sekarang</div>
                     </button>
-                    <a href="/njawani_app/dist/tutorial_pasang.pdf" target="_blank" class=" text-primary text-lg underline">
+                    <a href="/njawani-app/dist/tutorial_pasang.pdf" target="_blank" class=" text-primary text-lg underline">
                         Bagaimana cara install?
                     </a>
                 </div>
