--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
                             <li class="group flex justify-center">
                                 <a href="#evaluasi" class=" text-base font-bold text-dark py-2 mx-6 flex">Evaluasi</a>
                             </li>
-                            
-                            
                         </ul>
                     </nav>
                 </div>
@@ -75,7 +73,7 @@
                              <img src="dist/img/android-flat 1.png" width="50px" alt="">
                              <div class=" ml-7">
                                  <p class=" font-bold text-left text-xl text-white">Download</p>
-                                 <p class=" text-left text-white text-sm">v-0.1 (alpha testing)</p>
+                                 <p class=" text-left text-white text-sm">v-0.7β (beta testing)</p>
                              </div>
                         </button>
                         <a href="#teknologi" class=" font-bold text-xl text-primary hover:text-secondary transition duration-300 ease-in-out">Lihat Detail</a>
@@ -206,7 +204,7 @@
                     <button onclick="unduh()" class=" w-full rounded-2xl py-4 px-8 md:py-6 md:px-12 mb-12 bg-primary text-white text-base md:text-xl font-bold drop-shadow-mydrop1 hover:bg-dark hover:drop-shadow-mydrop2 focus:bg-dark transition duration-300 ease-in-out">
                         <div class=" w-full">Coba sekarang</div>
                     </button>
-                    <a href="/dist/tutorial_pasang.pdf" target="_blank" class=" text-primary text-lg underline">
+                    <a href="https://drive.google.com/uc?export=download&id=1576-XI3l8EeMYTpW-AqvlGoQO9CAHpzt" target="_blank" class=" text-primary text-lg underline">
                         Bagaimana cara install?
                     </a>
                 </div>
@@ -215,24 +213,49 @@
     </section>
     <!-- Sistem end -->
 
+    <!-- Pembaruan start -->
+    <section id="sistem" class=" pt-24 pb-16 flex bg-primarytransparan">
+        <div class="container px-8">
+            <h1 class="text-primary text-[28px] leading-tight mb-6 md:text-[38px] font-extrabold">
+                Apa yang baru?
+            </h1>
+            <p class=" text-2xl md:text-3xl text-dark font-bold mt-6">versi 0.7β (beta)</p>
+            <ul class=" list-disc text-lg md:text-xl pl-6">
+                <li>Fix kesalahan penulisan bahasa Jawa dan aksara Jawa (terverifikasi ahli).</li>
+            </ul>
+            <p class=" text-2xl md:text-3xl text-dark font-bold mt-6">versi 0.5β (beta)</p>
+            <ul class=" list-disc text-lg md:text-xl pl-6">
+                <li>Menggunakan arsitektur SSD MobileNet V2 FpnLite.</li>
+                <li>Menggunakan Coco dataset, mendukung hingga 80 objek. Daftar objek didukung dapat dilihat <a href="daftar_objek.html" target="_blank" class=" text-primary underline">di sini</a>.</li>
+                <li>Pendeteksian lebih akurat.</li>
+                <li>Optimalisasi penggunaan GPU di Android.</li>
+            </ul>
+        </div>
+    </section>
+    <!-- Pembaruan end -->
+
     <!-- Eval start -->
     <section id="evaluasi" class=" pt-32 pb-16 flex">
         <div class="container px-8">
             <h1 class="text-primary text-[24px] text-center leading-tight mb-6 md:text-[38px] font-extrabold">
-                Versi Testing Alpha
+                Versi Testing Beta
             </h1>
-            <div class="flex flex-wrap flex-col-reverse md:flex-row justify-between items-center">
+            <div class="flex flex-wrap justify-between items-center">
                 <div class=" md:w-1/2">
                     <p class=" text-lg lg:text-2xl mb-12 text-hitam">
-                        <a class=" text-primary">Versi saat ini adalah versi pengujian tahap alpha</a>, partisipasimu dalam pengujian
+                        <a class=" text-primary">Versi saat ini adalah versi pengujian tahap beta</a>, partisipasimu dalam pengujian
                         sangat berharga bagi kami untuk menyempurnakan aplikasi ini.
                     </p>
                     <a href="https://forms.gle/QvR2jc4ZAcLiiuLz7" target="_blank" class=" rounded-2xl py-4 px-8 bg-primary text-white text-xl font-bold">
-                        Isi Evaluasi Alpha
+                        Isi Evaluasi Beta
                     </a>
                 </div>
-                <div class=" md:w-1/3 p-8 max-w-lg -mt-6 md:-mt-16">
-                    <img src="dist/img/alpha.png" alt="">
+                <div class=" md:w-1/3 max-w-lg mt-32 md:px-6 lg:mt-0">
+                    <div class=" container bg-gradient-to-tr from-primary to-secondary drop-shadow-mydrop1 p-12 rounded-3xl flex flex-col items-center">
+                        <img src="dist/img/supertest.png" class=" md:w-2/3 -mt-32" alt="">
+                        <p class=" text-center text-white font-bold text-2xl lg:text-3xl">Jadilah Njawani <a class=" underline text-dark">Super</a> Tester</p>
+                        <a href="#" class=" rounded-2xl py-4 px-8 bg-dark mt-6 w-full text-white text-center text-lg md:text-xl font-bold drop-shadow-mydrop2">Segera Hadir</a>
+                    </div>
                 </div>
             </div>
         </div>
