--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class=" pl-4">
-                    <a href="#home" class=" py-3 flex items-center">
+                    <a href="/" class=" py-3 flex items-center">
                         <img src="dist/img/logo.png" class=" w-[48px]" alt="">
                         <p class=" text-dark font-bold text-2xl ml-6 hidden md:block">ꦚ꧀ꦗꦮꦤꦶ</p>
                     </a>
@@ -38,6 +38,9 @@
                             </li>
                             <li class="group flex justify-center">
                                 <a href="#tentang" class=" text-base font-bold text-dark py-2 mx-6 flex">Tentang</a>
+                            </li>
+                            <li class="group flex justify-center">
+                                <a href="/policy.html" class=" text-base font-bold text-dark py-2 mx-6 flex">Kebijakan Privasi</a>
                             </li>
                             <li class="group flex justify-center">
                                 <a href="#teknologi" class=" text-base font-bold text-dark py-2 mx-6 flex">Teknologi</a>
@@ -270,5 +273,6 @@
     <!-- Bottom Nav End -->
 
     <script src="dist/js/script.js"></script>
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </body>
 </html>
