wip-privacy policy

--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
             <div class="flex flex-wrap justify-between items-center">
                 <div class=" md:w-1/2">
                     <p class=" text-lg lg:text-2xl mb-12 text-hitam">
-                        <a class=" text-primary">Versi saat ini adalah versi pengujian tahap beta</a>, partisipasimu dalam pengujian
+                        <a class=" text-primary">Versi saat ini adalah versi v1.0.0</a>, partisipasimu dalam pengujian
                         sangat berharga bagi kami untuk menyempurnakan aplikasi ini.
                     </p>
                     <a href="https://forms.gle/QvR2jc4ZAcLiiuLz7" target="_blank" class=" rounded-2xl py-4 px-8 bg-primary text-white text-xl font-bold">
-                        Isi Evaluasi Beta
+                        Isi Evaluasi
                     </a>
                 </div>
                 <div class=" md:w-1/3 max-w-lg mt-32 md:px-6 lg:mt-0">
-                    <div class=" container bg-gradient-to-tr from-primary to-secondary drop-shadow-mydrop1 p-12 rounded-3xl flex flex-col items-center">
+                    <!-- <div class=" container bg-gradient-to-tr from-primary to-secondary drop-shadow-mydrop1 p-12 rounded-3xl flex flex-col items-center">
                         <img src="dist/img/supertest.png" class=" md:w-2/3 -mt-32" alt="">
                         <p class=" text-center text-white font-bold text-2xl lg:text-3xl">Jadilah Njawani <a class=" underline text-dark">Super</a> Tester</p>
                         <a href="#" class=" rounded-2xl py-4 px-8 bg-dark mt-6 w-full text-white text-center text-lg md:text-xl font-bold drop-shadow-mydrop2">Segera Hadir</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
