fix-privacy policy

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a href="#tentang" class=" text-base font-bold text-dark py-2 mx-6 flex">Tentang</a>
                             </li>
                             <li class="group flex justify-center">
-                                <a href="/policy.html" class=" text-base font-bold text-dark py-2 mx-6 flex">Kebijakan Privasi</a>
+                                <a href="./policy.html" class=" text-base font-bold text-dark py-2 mx-6 flex">Kebijakan Privasi</a>
                             </li>
                             <li class="group flex justify-center">
                                 <a href="#teknologi" class=" text-base font-bold text-dark py-2 mx-6 flex">Teknologi</a>
