fix-privacy policy

--- a/policy.html
+++ b/policy.html
@@ -41,7 +41,7 @@
     </head>
     <body class="vscode-body vscode-light">
 
-        <a href="/">Home</a> <br>
+        <a href="./">Home</a> <br>
 
         <h1 id="privacy-policy-for-njawani">Privacy Policy for Njawani</h1>
         <p>Njawani (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;) operates the Njawani mobile application (the &quot;Service&quot;). This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
