fix-privacy policy

--- a/policy.html
+++ b/policy.html
@@ -58,10 +58,10 @@
         <h2 id="data-retention-and-deletion">Data Retention and Deletion</h2>
         <p>We do not retain any personal information that you provide through the Service. You may delete any photos or videos you have uploaded to the Service at any time.</p>
         <h2 id="compliance-with-laws-and-regulations">Compliance with Laws and Regulations</h2>
-        <p>We are fully compliant with applicable data protection laws and regulations, such as the General Data Protection Regulation (GDPR) and the California Consumer Privacy Act (CCPA). If you have any questions or concerns about how we collect or process your personal information, or if you would like to exercise any of your rights under GDPR or CCPA, please contact us at <a href="mailto:blablabla@mail.com">blablabla@mail.com</a>.</p>
+        <p>We are fully compliant with applicable data protection laws and regulations, such as the General Data Protection Regulation (GDPR) and the California Consumer Privacy Act (CCPA). If you have any questions or concerns about how we collect or process your personal information, or if you would like to exercise any of your rights under GDPR or CCPA, please contact us at <a href="mailto:anjarmath@gmail.com">anjarmath@gmail.com</a>.</p>
         <h2 id="changes-to-this-privacy-policy">Changes to This Privacy Policy</h2>
         <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.</p>
         <h2 id="contact-us">Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:blablabla@mail.com">blablabla@mail.com</a>.</p>            
+        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:anjarmath@gmail.com">anjarmath@gmail.com</a>.</p>            
     </body>
     </html>
