--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class=" pl-4">
-                    <a href="/" class=" py-3 flex items-center">
+                    <a href="/" class=" py-3 flex items-center titletext">
                         <img src="dist/img/logo.png" class=" w-[48px]" alt="">
                         <p class=" text-dark font-bold text-2xl ml-6 hidden md:block">ꦚ꧀ꦗꦮꦤꦶ</p>
                     </a>
@@ -71,15 +71,14 @@
                         Ketahui Aksara Jawa dari benda di sekitarmu hanya dengan memakai kamera ponsel. 
                         Belajar Aksara Jawa jadi menyenangkan!
                     </p>
-                    <div class=" mt-16 flex flex-wrap justify-center md:justify-between items-center md:w-3/4">
-                        <button onclick=" unduh();" class=" rounded-full flex items-center mb-6 md:mb-0 pl-3 pr-9 py-3 bg-gradient-to-tr from-primary to-secondary drop-shadow-mydrop1 hover:bg-gradient-to-bl">
-                             <img src="dist/img/android-flat 1.png" width="50px" alt="">
-                             <div class=" ml-7">
-                                 <p class=" font-bold text-left text-xl text-white">Download</p>
-                                 <p class=" text-left text-white text-sm">v-0.7β (beta testing)</p>
-                             </div>
-                        </button>
-                        <a href="#teknologi" class=" font-bold text-xl text-primary hover:text-secondary transition duration-300 ease-in-out">Lihat Detail</a>
+                    <div class=" mt-16 flex gap-2 justify-center md:justify-between items-center">
+                        <a href='https://play.google.com/store/apps/details?id=com.anjarmath.njawani&pli=1&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                            <img alt='Temukan di Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/id_badge_web_generic.png'/>
+                        </a>
+                        <button onclick=" unduh();">
+                            <img alt='Download APK' src="dist/img/download-apk.png">
+                       </button>
+                        <!-- <a href="#teknologi" class=" font-bold text-xl text-primary hover:text-secondary transition duration-300 ease-in-out">Lihat Detail</a> -->
                     </div>
                 </div>
                 <div class=" w-full lg:w-1/2 lg:-mt-16 flex justify-center">
@@ -135,6 +134,7 @@
                 </a>
                 
             </div>
+            <span class=" text-center">Dapatkan source code dan jurnal <a class=" underline font-bold text-primary" href="https://github.com/anjarmath/njawani">di sini</a>.</span>
         </div>
     </section>
     <!-- Teknologi end -->
@@ -204,9 +204,9 @@
                     </p>
                 </div>
                 <div class=" w-full md:w-1/3 py-12 flex flex-wrap justify-center">
-                    <button onclick="unduh()" class=" w-full rounded-2xl py-4 px-8 md:py-6 md:px-12 mb-12 bg-primary text-white text-base md:text-xl font-bold drop-shadow-mydrop1 hover:bg-dark hover:drop-shadow-mydrop2 focus:bg-dark transition duration-300 ease-in-out">
-                        <div class=" w-full">Coba sekarang</div>
-                    </button>
+                    <a href="#home" class=" w-full rounded-2xl py-4 px-8 md:py-6 md:px-12 mb-12 bg-primary text-white text-base md:text-xl font-bold drop-shadow-mydrop1 hover:bg-dark hover:drop-shadow-mydrop2 focus:bg-dark transition duration-300 ease-in-out">
+                        <p class=" text-center">Coba sekarang</p> 
+                    </a>
                     <a href="https://drive.google.com/uc?export=download&id=1576-XI3l8EeMYTpW-AqvlGoQO9CAHpzt" target="_blank" class=" text-primary text-lg underline">
                         Bagaimana cara install?
                     </a>
@@ -222,6 +222,15 @@
             <h1 class="text-primary text-[28px] leading-tight mb-6 md:text-[38px] font-extrabold">
                 Apa yang baru?
             </h1>
+            <p class=" text-2xl md:text-3xl text-dark font-bold mt-6">versi 1.1.0 (Relesae)</p>
+            <ul class=" list-disc text-lg md:text-xl pl-6">
+                <li>Fix crash di beberapa perangkat</li>
+            </ul>
+            <p class=" text-2xl md:text-3xl text-dark font-bold mt-6">versi 1.0.0 (Release)</p>
+            <ul class=" list-disc text-lg md:text-xl pl-6">
+                <li>Rilis Play Store</li>
+                <li>Mengurangi ukuran aplikasi</li>
+            </ul>
             <p class=" text-2xl md:text-3xl text-dark font-bold mt-6">versi 0.7β (beta)</p>
             <ul class=" list-disc text-lg md:text-xl pl-6">
                 <li>Fix kesalahan penulisan bahasa Jawa dan aksara Jawa (terverifikasi ahli).</li>
@@ -241,12 +250,12 @@
     <section id="evaluasi" class=" pt-32 pb-16 flex">
         <div class="container px-8">
             <h1 class="text-primary text-[24px] text-center leading-tight mb-6 md:text-[38px] font-extrabold">
-                Versi Testing Beta
+                Coba dan Evaluasi
             </h1>
             <div class="flex flex-wrap justify-between items-center">
                 <div class=" md:w-1/2">
                     <p class=" text-lg lg:text-2xl mb-12 text-hitam">
-                        <a class=" text-primary">Versi saat ini adalah versi v1.0.0</a>, partisipasimu dalam pengujian
+                        <a class=" text-primary">Versi saat ini adalah versi v1.1.0</a>, partisipasimu dalam pengujian
                         sangat berharga bagi kami untuk menyempurnakan aplikasi ini.
                     </p>
                     <a href="https://forms.gle/QvR2jc4ZAcLiiuLz7" target="_blank" class=" rounded-2xl py-4 px-8 bg-primary text-white text-xl font-bold">
